--- a/exponential_model.ipynb
+++ b/exponential_model.ipynb
@@ -17,15 +17,154 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
     "from bokeh.plotting import figure, save\n",
     "from bokeh.io import curdoc, show\n",
     "from bokeh.layouts import row, column, widgetbox, gridplot\n",
-    "from bokeh.models import ColumnDataSource, Legend, DatetimeTickFormatter\n",
+    "from bokeh.models import ColumnDataSource, Legend, DatetimeTickFormatter, Dropdown\n",
     "from bokeh.models.widgets import Slider, TextInput\n",
     "from bokeh.io import output_notebook, output_file\n",
     "\n",
     "from bokeh.application import Application\n",
     "from bokeh.application.handlers import FunctionHandler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>Dates</th>\n",
+       "      <th>value</th>\n",
+       "      <th>Number_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.0000</td>\n",
+       "      <td>101.0000</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.0000</td>\n",
+       "      <td>138.0000</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.2833</td>\n",
+       "      <td>103.8333</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.1667</td>\n",
+       "      <td>84.2500</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Malaysia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.5000</td>\n",
+       "      <td>112.5000</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country/Region Province/State      Lat      Long      Dates  value  \\\n",
+       "0       Thailand            NaN  15.0000  101.0000 2020-01-22      2   \n",
+       "1          Japan            NaN  36.0000  138.0000 2020-01-22      2   \n",
+       "2      Singapore            NaN   1.2833  103.8333 2020-01-22      0   \n",
+       "3          Nepal            NaN  28.1667   84.2500 2020-01-22      0   \n",
+       "4       Malaysia            NaN   2.5000  112.5000 2020-01-22      0   \n",
+       "\n",
+       "   Number_days  \n",
+       "0          0.0  \n",
+       "1          0.0  \n",
+       "2          0.0  \n",
+       "3          0.0  \n",
+       "4          0.0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covdat = pd.read_csv(\"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv\")\n",
+    "covdat = pd.melt(covdat, id_vars=[\"Country/Region\", \"Province/State\", \"Lat\", \"Long\"], var_name=\"Dates\")\n",
+    "covdat[\"Dates\"] = pd.to_datetime(covdat[\"Dates\"], format = \"%m/%d/%y\")\n",
+    "covdat[\"Number_days\"] = covdat[\"Dates\"] - covdat[\"Dates\"].min()\n",
+    "covdat[\"Number_days\"] = covdat[\"Number_days\"].astype(\"timedelta64[D]\")\n",
+    "covdat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covdat_c = covdat.groupby([\"Country/Region\", \"Dates\", \"Number_days\"], as_index=False)[[\"value\"]].sum()\n",
+    "target_countries = [\"Australia\", \"China\", \"Venezuela\", \"Japan\", \"Canada\", \"Singapore\", \"United Kingdom\", \"New Zealand\"]\n",
+    "covdat_c = covdat_c[covdat_c[\"Country/Region\"].isin(target_countries)]\n",
+    "\n",
+    "covdat_c.head()\n",
+    "# covdat_c.loc[covdat_c[\"Country/Region\"] == \"Australia\"]\n",
+    "# covdat_c[\"Number_days\"].loc[covdat_c[\"Country/Region\"] == \"Australia\"]\n",
+    "\n",
+    "country_list = [(country, country) for country in covdat_c[\"Country/Region\"].unique()]\n",
+    "# country_list"
    ]
   },
   {
@@ -49,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -345,11 +484,11 @@
    ],
    "source": [
     "N0 = 1\n",
-    "r = 1.3\n",
+    "r = 0.1\n",
     "dt = 1\n",
-    "Nt = 30\n",
-    "max_Nt = 40\n",
-    "r0 = 2\n",
+    "Nt = 54\n",
+    "max_Nt = 120\n",
+    "r0 = 1.1\n",
     "\n",
     "output_notebook()\n",
     "\n",
@@ -369,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -377,12 +516,12 @@
       "application/vnd.bokehjs_exec.v0+json": "",
       "text/html": [
        "\n",
-       "<script src=\"http://localhost:64307/autoload.js?bokeh-autoload-element=1112&bokeh-absolute-url=http://localhost:64307&resources=none\" id=\"1112\"></script>"
+       "<script src=\"http://localhost:52301/autoload.js?bokeh-autoload-element=1141&bokeh-absolute-url=http://localhost:52301&resources=none\" id=\"1141\"></script>"
       ]
      },
      "metadata": {
       "application/vnd.bokehjs_exec.v0+json": {
-       "server_id": "e52cf95172f04f10a07dfdd8c61545ec"
+       "server_id": "37190272e00940a28018c195a61a2951"
       }
      },
      "output_type": "display_data"
@@ -406,9 +545,12 @@
     "y3 = N_r0\n",
     "\n",
     "source = ColumnDataSource(data=dict(x=t, y1=y1, y2=y2, y3=y3))\n",
+    "source_covdat_c = ColumnDataSource(data=dict(x = covdat_c[\"Number_days\"].loc[covdat_c[\"Country/Region\"] == \"Australia\"],\n",
+    "                                             y = covdat_c[\"value\"].loc[covdat_c[\"Country/Region\"] == \"Australia\"], \n",
+    "                                             dates = covdat_c[\"Dates\"].loc[covdat_c[\"Country/Region\"] == \"Australia\"]))\n",
     "\n",
     "p1 = figure(plot_height = 400, plot_width = 600, title = \"Exponential Growth\",\n",
-    "              tools = \"crosshair,pan,reset,save,wheel_zoom\",\n",
+    "              tools = \"crosshair,pan,reset,save,wheel_zoom,hover\",\n",
     "              y_range = [0, 800])\n",
     "\n",
     "p1.xaxis.axis_label = \"Time (days)\"\n",
@@ -417,9 +559,10 @@
     "res01 = p1.line('x', 'y1', source=source, line_width=3, line_alpha=0.6, color='blue')\n",
     "res02 = p1.line('x', 'y2', source=source, line_width=3, line_alpha=0.6, color='red')\n",
     "res03 = p1.line('x', 'y3', source=source, line_width=3, line_alpha=0.6, color='orange')\n",
+    "res04 = p1.line('x', 'y', source=source_covdat_c, line_width=3, line_alpha=0.6, color='black')\n",
     "\n",
-    "p2 = figure(plot_height = 400, plot_width = 400, title = \"Exponential Growth Log Scale\",\n",
-    "              tools = \"crosshair,pan,reset,save,wheel_zoom\", y_axis_type = \"log\")\n",
+    "p2 = figure(plot_height = 400, plot_width = 600, title = \"Exponential Growth Log Scale\",\n",
+    "              tools = \"crosshair,pan,reset,save,wheel_zoom,hover\", y_axis_type = \"log\")\n",
     "\n",
     "p2.xaxis.axis_label = \"Time (days)\"\n",
     "p2.yaxis.axis_label = \"Number infected people (log scale)\"\n",
@@ -427,19 +570,25 @@
     "res01ex = p2.line('x', 'y1', source=source, line_width=3, line_alpha=0.6, color='blue')\n",
     "res02ex = p2.line('x', 'y2', source=source, line_width=3, line_alpha=0.6, color='red')\n",
     "res03ex = p2.line('x', 'y3', source=source, line_width=3, line_alpha=0.6, color='orange')\n",
+    "res04ex = p2.line('x', 'y', source=source_covdat_c, line_width=3, line_alpha=0.6, color='black')\n",
     "\n",
-    "legend1 = Legend(items = [(\"Exp Growth Exact approach\", [res01]), (\"Exp Growth Numerical approach\", [res02]), (\"Exponential Growth r0\", [res03])])\n",
-    "legend2 = Legend(items = [(\"Exp Growth Exact approach\", [res01ex]), (\"Exp Growth Numerical approach\", [res02ex]), (\"Exponential Growth r0\", [res03ex])],\n",
-    "                                                                     location = (10,230))\n",
+    "legend1 = Legend(items = [(\"Exp Growth Exact approach\", [res01]), (\"Exp Growth Numerical approach\", [res02]), \n",
+    "                          (\"Exponential Growth r0\", [res03]), (\"Covid19 cases Australia\", [res04])],\n",
+    "                        location = (10,200))\n",
+    "legend2 = Legend(items = [(\"Exp Growth Exact approach\", [res01ex]), (\"Exp Growth Numerical approach\", [res02ex]), \n",
+    "                          (\"Exponential Growth r0\", [res03ex]), (\"Covid19 cases Australia\", [res04ex])],\n",
+    "                                                                     location = (10,200))\n",
     "\n",
     "p1.add_layout(legend1)\n",
     "p2.add_layout(legend2)\n",
     "\n",
     "# Set up widgets\n",
     "N0_slider = Slider(title=\"Initial cases\", value=N0, start=1, end=1000, step=1)\n",
-    "r_slider = Slider(title=\"Discrete Growth Rate\", value=0, start=0, end=5, step=0.1)\n",
-    "r0_slider = Slider(title=\"Basic reproduction number\", value=r0, start=0, end=5, step = 0.1)\n",
+    "r_slider = Slider(title=\"Discrete Growth Rate\", value=r, start=0, end=3, step=0.02)\n",
+    "r0_slider = Slider(title=\"Basic reproduction number\", value=r0, start=0, end=3, step = 0.02)\n",
     "Nt_slider = Slider(title=\"Total time (days)\", value=Nt, start=10, end=max_Nt, step=1)\n",
+    "country_opts = country_list\n",
+    "dropdown = Dropdown(label=\"Select Country\", button_type=\"warning\", menu=country_opts)\n",
     "    \n",
     "def update_data(attrname, old, new):\n",
     "    # Get the current slider values\n",
@@ -448,6 +597,7 @@
     "    c = dt\n",
     "    d = Nt_slider.value\n",
     "    e = r0_slider.value\n",
+    "    f = dropdown.value\n",
     "    \n",
     "    D = np.zeros(d + 2)\n",
     "    D[0] = a\n",
@@ -466,14 +616,17 @@
     "    y3 = D_r0\n",
     "\n",
     "    source.data = dict(x=t1, y1=y1, y2=y2, y3=y3)\n",
+    "    source_covdat_c.data = dict(x = covdat_c[\"Number_days\"].loc[covdat_c[\"Country/Region\"] == f],\n",
+    "                           y = covdat_c[\"value\"].loc[covdat_c[\"Country/Region\"] == f], \n",
+    "                           dates = covdat_c[\"Dates\"].loc[covdat_c[\"Country/Region\"] == f])\n",
     "    \n",
     "    \n",
-    "for w in [N0_slider, r_slider, r0_slider, Nt_slider]:\n",
+    "for w in [N0_slider, r_slider, r0_slider, Nt_slider, dropdown]:\n",
     "    w.on_change('value', update_data)\n",
-    "    \n",
-    "    \n",
-    "inputs = widgetbox(N0_slider, r_slider, r0_slider, Nt_slider)\n",
-    "layout = row(p1, p2, widgetbox(N0_slider, r_slider, r0_slider, Nt_slider))\n",
+    "\n",
+    "inputs = column(N0_slider, r_slider, r0_slider, Nt_slider)\n",
+    "dropdown_col = column(dropdown)\n",
+    "layout = row(column(p1, p2), column(N0_slider, r_slider, r0_slider, Nt_slider), dropdown_col)\n",
     "# layout = layout([[p1, inputs], [p2]], sizing_mode = \"stretch_both\")\n",
     "\n",
     "\n",
